--- a/privacy.html
+++ b/privacy.html
@@ -1,17 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Privacy Policy</title>
-  <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Privacy Policy - EduBlake</title>
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
+  <!-- HEADER/NAV -->
   <header>
-    <h1>Privacy Policy</h1>
+    <nav>
+      <div class="logo">
+        <a href="index.html">
+          <img src="assets/DualSubLogo.png" alt="EduBlake Logo">
+        </a>
+        <h1>EduBlake</h1>
+      </div>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="support.html">Support</a></li>
+        <li><a href="privacy.html">Privacy</a></li>
+      </ul>
+    </nav>
   </header>
 
-  <main>
+  <!-- PRIVACY CONTENT -->
+  <main class="privacy-content">
+    <h2>Privacy Policy</h2>
+
+
+
     <section>
       <h2>Introduction</h2>
       <p>
@@ -100,6 +118,14 @@
 
   <footer>
     <p>&copy; 2025 Blake Miller. All rights reserved. <a href="index.html">Back to Home</a></p>
+  </footer>
+</body>
+</html>
+  </main>
+
+  <!-- FOOTER -->
+  <footer>
+    <p>&copy; 2025 EduBlake. All rights reserved.</p>
   </footer>
 </body>
 </html>
