--- a/support.html
+++ b/support.html
@@ -1,1 +1,42 @@
-For Support and questions please reach out to ttw55970@gmail.com
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Support - EduBlake</title>
+  <link rel="stylesheet" href="styles.css" />
+</head>
+<body>
+  <!-- HEADER/NAV -->
+  <header>
+    <nav>
+      <div class="logo">
+        <a href="index.html">
+          <img src="assets/DualSubLogo.png" alt="EduBlake Logo">
+        </a>
+        <h1>EduBlake</h1>
+      </div>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="support.html">Support</a></li>
+        <li><a href="privacy.html">Privacy</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <!-- SUPPORT CONTENT -->
+  <main class="support-content">
+    <h2>Support</h2>
+    <p>
+      If you have any questions, issues, or feedback regarding our apps, please contact us at:
+      <br />
+      <a href="mailto:contact@edublake.com">support@edublake.com</a>
+    </p>
+  </main>
+
+  <!-- FOOTER -->
+  <footer>
+    <p>&copy; 2025 EduBlake. All rights reserved.</p>
+  </footer>
+</body>
+</html>
