--- a/privacy.html
+++ b/privacy.html
@@ -25,9 +25,10 @@
   </header>
 
   <!-- PRIVACY CONTENT -->
-  
+  <main>
     <h2>Privacy Policy</h2>
-     <section>
+
+    <section>
       <h2>Introduction</h2>
       <p>
         Use Dual Subtitles For Netflix. An extension to allow more than one subtitle while watching Netflix, useful for language engagement and learning.
@@ -36,7 +37,7 @@
         Engage with us in other related ways, including any sales, marketing, or events.
       </p>
       <p>
-        Questions or concerns? Reading this Privacy Notice will help you understand your privacy rights and choices. We are responsible for making decisions about how your personal information is processed. If you do not agree with our policies and practices, please do not use our Services. If you still have any questions or concerns, please contact us at <a href="mailto:ttw55970@gmail.com">ttw55970@gmail.com</a>.
+        Questions or concerns? Reading this Privacy Notice will help you understand your privacy rights and choices. We are responsible for making decisions about how your personal information is processed. If you do not agree with our policies and practices, please do not use our Services. If you still have any questions or concerns, please contact us at <a href="mailto:contact@edublake.com">contact@edublake.com</a>.
       </p>
     </section>
 
@@ -48,7 +49,7 @@
         <li><strong>Do we collect any information from third parties?</strong> No, we do not collect any information from third parties.</li>
         <li><strong>How do we process your information?</strong> To provide, improve, and administer our services, and for security and compliance purposes. Learn more below.</li>
         <li><strong>What are your rights?</strong> Depending on where you are, you may have certain rights regarding your personal information. Learn more below.</li>
-        <li><strong>How can you exercise your rights?</strong> Contact us at <a href="mailto:ttw55970@gmail.com">ttw55970@gmail.com</a>. We’ll respond per applicable laws.</li>
+        <li><strong>How can you exercise your rights?</strong> Contact us at <a href="mailto:contact@edublake.com">contact@edublake.com</a>. We’ll respond per applicable laws.</li>
       </ul>
     </section>
 
@@ -108,21 +109,14 @@
     <section>
       <h2>Contact Us</h2>
       <p>
-        If you have questions, email us at <a href="mailto:ttw55970@gmail.com">ttw55970@gmail.com</a>.
+        If you have questions, email us at <a href="mailto:contact@edublake.com">contact@edublake.com</a>.
       </p>
     </section>
   </main>
 
-  <footer>
-    <p>&copy; 2025 Blake Miller. All rights reserved. <a href="index.html">Back to Home</a></p>
-  </footer>
-</body>
-</html>
-  
-
   <!-- FOOTER -->
   <footer>
-    <p>&copy; 2025 EduBlake. All rights reserved.</p>
+    <p>&copy; 2025 Blake Miller. All rights reserved. <a href="index.html">Back to Home</a></p>
   </footer>
 </body>
 </html>
