--- a/contact.html
+++ b/contact.html
@@ -18,19 +18,19 @@
       </div>
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="support.html">Support</a></li>
+        <li><a href="contact.html">Contact</a></li>
         <li><a href="privacy.html">Privacy</a></li>
       </ul>
     </nav>
   </header>
 
   <!-- SUPPORT CONTENT -->
-  <main class="support-content">
+  <main class="contact-content">
     <h2>Support</h2>
     <p>
       If you have any questions, issues, or feedback regarding our apps, please contact us at:
       <br />
-      <a href="mailto:contact@edublake.com">support@edublake.com</a>
+      <a href="mailto:contact@edublake.com">contact@edublake.com</a>
     </p>
   </main>
 
