--- a/netflixexample.html
+++ b/netflixexample.html
@@ -15,7 +15,7 @@
   <!-- Video Player Section -->
   <div class="video-container">
     <video id="netflix-video" controls>
-      <source src="sample-video.mp4" type="video/mp4">
+      <source src="Assets/sample-video.mp4" type="video/mp4">
       <!-- Subtitle Tracks -->
       <track src="subtitles-en.vtt" kind="subtitles" srclang="en" label="English" default>
       <track src="subtitles-ko.vtt" kind="subtitles" srclang="ko" label="Korean">
