--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <div class="logo">
         <a href="index.html">
           <!-- Replace 'assets/DualSubLogo.png' with your actual image path -->
-          <img src="assets/DualSubLogo.png" alt="EduBlake Logo">
+          <img src="Assets/DualSubLogo.png" alt="EduBlake Logo">
         </a>
         <h1>EduBlake</h1>
       </div>
