--- a/netflixexample.html
+++ b/netflixexample.html
@@ -9,7 +9,7 @@
 <body>
   <!-- Header -->
   <header class="navbar">
-    <img src="netflix-logo.png" alt="Netflix Logo" class="logo">
+    <img src="Netflix.png" alt="Netflix Logo" class="logo">
   </header>
 
   <!-- Video Player Section -->
