--- a/netflixexample.html
+++ b/netflixexample.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Netflix Test Replica</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="stylesdev.css">
 </head>
 <body>
   <!-- Netflix-like video player structure -->
