--- a/netflixexample.html
+++ b/netflixexample.html
@@ -11,7 +11,7 @@
   <div class="nf-player-container">
     <div class="nf-video-player">
       <video class="nf-video-element" controls>
-        <source src="sample-video.mp4" type="video/mp4">
+        <source src="Assets/sample-video.mp4" type="video/mp4">
       </video>
       <div class="nf-subtitle-overlay">
         <!-- Subtitle containers -->
