--- a/replica-netflix/netflixexample.html
+++ b/replica-netflix/netflixexample.html
@@ -20,18 +20,19 @@
       src="https://www.w3schools.com/html/mov_bbb.mp4" 
       controls
       poster="https://via.placeholder.com/800x450.png?text=Fake+Netflix+Video">
-      <!-- You can add real <track> tags for demonstration if you want them natively visible:
+      
+      <!-- Native subtitle tracks -->
       <track kind="subtitles" src="someSubtitleFile_en.vtt" srclang="en" label="English" default>
       <track kind="subtitles" src="someSubtitleFile_ko.vtt" srclang="ko" label="Korean">
-      -->
     </video>
 
-    <!-- Show "two visible subtitles" as if on top of the video (HTML overlays) -->
+    <!-- Optional Overlays: if you want to visually show two subtitles 
+         at once, or demonstrate your extension’s custom overlay. -->
     <div class="subtitle-overlay top-subtitle">
-      English Subtitle (Fake by default)
+      English Subtitle (Enabled by the extension for Dual Subtitles)
     </div>
     <div class="subtitle-overlay bottom-subtitle">
-      Korean Subtitle (Fake by default)
+      Korean Subtitle (By default this should be on)
     </div>
   </section>
 
@@ -45,13 +46,13 @@
       This is a mock environment so our extension can test:
       <ul>
         <li>Intercepting <code>JSON.parse()</code> calls for <code>timedtexttracks</code></li>
-        <li>Fetching subtitle files <code>someSubtitleFile_en.xml</code> and <code>someSubtitleFile_ko.xml</code></li>
+        <li>Fetching subtitle files <code>someSubtitleFile_en.xml</code> / <code>.vtt</code> and <code>someSubtitleFile_ko.xml</code> / <code>.vtt</code></li>
         <li>Rendering or storing them in <code>localStorage</code></li>
       </ul>
     </p>
     <p>
       If your extension is active and allowed to run on this domain, it will detect the
-      <code>movieId</code> and attempt to fetch the subtitles from the URLs below.
+      <code>movieId</code> and attempt to fetch the subtitles from the mock response's URLs.
     </p>
   </section>
 </body>
