--- a/netflixexample.html
+++ b/netflixexample.html
@@ -18,8 +18,7 @@
     <video 
       class="html5-main-video" 
       src="https://www.w3schools.com/html/mov_bbb.mp4" 
-      controls
-      poster="https://via.placeholder.com/800x450.png?text=Fake+Netflix+Video">
+      controls>
       
       <!-- Native subtitle tracks -->
       <track kind="subtitles" src="someSubtitleFile_en.vtt" srclang="en" label="English" default>
