--- a/netflixexample.html
+++ b/netflixexample.html
@@ -18,7 +18,8 @@
     <video 
       class="html5-main-video" 
       src="https://www.w3schools.com/html/mov_bbb.mp4" 
-      controls>
+      controls
+      poster="Netflix.png">
       
       <!-- Native subtitle tracks -->
       <track kind="subtitles" src="someSubtitleFile_en.vtt" srclang="en" label="English" default>
