--- a/netflixexample.html
+++ b/netflixexample.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Netflix Replica</title>
   <link rel="stylesheet" href="stylesdev.css" />
+  <link rel="icon" href="./favicon.ico" type="Netflix.png">
+
 </head>
 <body>
   <!-- Fake Netflix Header -->
