--- a/netflixexample.html
+++ b/netflixexample.html
@@ -24,8 +24,8 @@
       poster="Netflix.png">
       
       <!-- Native subtitle tracks -->
-      <track kind="subtitles" src="someSubtitleFile_en.vtt" srclang="en" label="English" default>
-      <track kind="subtitles" src="someSubtitleFile_ko.vtt" srclang="ko" label="Korean">
+      <track kind="subtitles" src="subtitles-en.vtt" srclang="en" label="English" default>
+      <track kind="subtitles" src="subtitles-ko.vtt" srclang="ko" label="Korean">
     </video>
 
     <!-- Optional Overlays: if you want to visually show two subtitles 
