--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
       <div class="logo">
         <a href="index.html">
           <!-- Replace 'assets/DualSubLogo.png' with your actual image path -->
-          <img src="Assets/DualSubLogo.png" alt="EduBlake Logo">
+          <img src="Assets/applogo1.png" alt="EduBlake Logo">
         </a>
         <h1>EduBlake</h1>
       </div>
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="support.html">Support</a></li>
-        <li><a href="privacy.html">Privacy</a></li>
+        <li><a href="contact.html">Privacy</a></li>
       </ul>
     </nav>
   </header>
