--- a/privacy.html
+++ b/privacy.html
@@ -18,7 +18,7 @@
       </div>
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="support.html">Support</a></li>
+        <li><a href="contact.html">Support</a></li>
         <li><a href="privacy.html">Privacy</a></li>
       </ul>
     </nav>
